--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-playwright==1.40.0
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-supabase==2.3.0
+playwright>=1.48.0
+fastapi>=0.115.0
+uvicorn>=0.32.0
+python-dotenv>=1.0.0
+supabase>=2.11.0
